# structured-sweetpea

./: pyproject.toml
src/mate_structure/sweetpea/builder/: consts.py  experimental_design.py  expr.py  factor.py  level.py
src/mate_structure/sweetpea/schema/: __init__.py  experimental_design.py  expr.py  factor.py  level.py
src/mate_structure/sweetpea/utils/: sweetpea.json
src/mate_structure/sweetpea/utils/convert/: __init__.py
src/mate_structure/sweetpea/utils/report/: __init__.py
src/mate_structure/sweetpea/wrapper/: factor.py  level.py
src/mate_structure/variables/schema/: __init__.py  variable.py
